# qUKF

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  test_unit_qUKF.cpp
demo/: CMakeLists.txt  motion_filtering.h
demo/headers/: circ_buffer.h  motion_filtering.h
demo/src/: motion_filtering.cpp  test_unit_qUKF.cpp
libUKF/: CMakeLists.txt  libUKF.pro
libUKF/headers/: eigen_tools.h  sigma_point.h  sigma_q_point.h  unscented_KF.h
libUKF/include/: def.h  eigen_tools.h  sigma_q_point.h  statistic_tools.h  unscented_KF.h
libUKF/src/: eigen_tools.cpp  sigma_point.cpp  sigma_q_point.cpp  statistic_tools.cpp  unscented_KF.cpp
pyUKF/: CMakeLists.txt  README
pyUKF/src/: pyUKF.cpp
qt-demo/: README
src/: eigen_tools.cpp  sigma_point.cpp  statistic_tools.cpp  unscented_KF.cpp
